# cmake-notes

./: CMakeLists.txt  build.sh  readme.md
src/myApp/: CMakeLists.txt  main.cpp
src/myLib/: CMakeLists.txt  mylib.cpp  mylib.h
